--- a/index.html
+++ b/index.html
@@ -487,7 +487,8 @@
         { time:"11:00", type:"food", title:"早餐/早午餐：Depot", note:"布丁＆烤土司人氣高，早點到更穩。", place:"Depot" },
         { time:"12:30", type:"food", title:"午餐：銀座八五（人氣拉麵）", note:"建議提早排隊，吃完再散步甜點。", place:"銀座 八五" },
         { time:"14:30", type:"food", title:"甜點：Frédéric Cassel", note:"補糖補能量，銀座逛街也順路。", place:"Frédéric Cassel Ginza Mitsukoshi Store" },
-        { time:"16:00", type:"shrine", title:"淺草：今戶神社、淺草寺雷門", note:"拍雷門、逛仲見世，傍晚燈光很美。", place:"浅草寺 雷門" },
+        { time:"16:00", type:"shrine", title:"參拜：今戶神社", note:"招財貓＋戀愛能量點，先來這裡拍照更舒服。", place:"今戶神社" },
+        { time:"16:40", type:"spot",   title:"淺草寺・雷門", note:"拍雷門、逛仲見世，傍晚燈光很美。", place:"浅草寺 雷門" },
         { time:"17:30", type:"food", title:"點心：KURAMAE CANNELE", note:"可麗露外脆內Q，買了邊走邊吃。", place:"KURAMAE CANNELE" },
         { time:"—", type:"hotel", title:"住宿：Ueno First City Hotel", note:"回上野休息，隔天要自駕早起。", place:"Ueno First City Hotel" },
       ]
@@ -818,3 +819,4 @@
 </script>
 </body>
 </html>
+
