--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       --radius: 18px;
 
       /* ✅ 背景底圖：要換圖就改這行 URL */
-      --bg-img: url("https://res.klook.com/image/upload/activities/dou1pmzm3f41p75jkox9.jpg"");
+      --bg-img: url("https://res.klook.com/image/upload/activities/dou1pmzm3f41p75jkox9.jpg");
     }
     [data-theme="light"]{
       --bg:#f6f8ff;
@@ -843,3 +843,4 @@
 </body>
 </html>
 ```
+
