--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>東京×富士×仙台 行程表（互動版）</title>
+  <title>東京×富士×仙台 行程表</title>
   <style>
     :root{
       --bg:#0b0f17;
@@ -565,6 +565,7 @@
         { time:"16:00", type:"shop", title:"仙台車站 伴手禮採買", note:"牛舌相關、點心、限定口味一次補齊。", place:"仙台駅" },
         { time:"18:30", type:"food", title:"晚餐：仙台車站當地美食（牛舌/壽司）", note:"吃飽再上車回東京更舒服。", place:"仙台駅" },
         { time:"21:00", type:"transit", title:"新幹線：仙台 → 東京", note:"可先把隔天東京行程需要的交通票/路線確認一下。", place:"仙台駅" },
+        { time:"—", type:"hotel", title:"住宿：民宿", note:"地址：1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本", place:"1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本" },
       ]
     },
     {
@@ -579,6 +580,7 @@
         { time:"11:30", type:"food", title:"午餐：らぁ麺や嶋", note:"熱門店可能需要排隊，早到更好。", place:"らぁ麺や 嶋" },
         { time:"14:30", type:"food", title:"點心：Shogun Burger", note:"想要爽感就點招牌。", place:"Shogun Burger" },
         { time:"18:30", type:"food", title:"晚餐：伊吹壽喜燒", note:"暖胃收尾，今天吃得很完整。", place:"伊吹 すき焼き" },
+        { time:"—", type:"hotel", title:"住宿：民宿", note:"地址：1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本", place:"1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本" },
       ]
     },
     {
@@ -590,6 +592,7 @@
       items: [
         { time:"06:00", type:"spot", title:"東京迪士尼海洋 全日遊玩", note:"建議入園先搶熱門設施/表演時段。", place:"Tokyo DisneySea" },
         { time:"20:30", type:"food", title:"晚餐：焼肉ホルモン金樹", note:"玩完吃肉超幸福。", place:"焼肉ホルモン金樹" },
+        { time:"—", type:"hotel", title:"住宿：民宿", note:"地址：1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本", place:"1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本" },
       ]
     },
     {
@@ -602,6 +605,7 @@
         { time:"10:30", type:"shrine", title:"阿佐谷神明宮", note:"氣氛很舒服，適合拍清新日系感。", place:"阿佐谷神明宮" },
         { time:"12:30", type:"food", title:"午餐：Tonkatsu Narikura", note:"名店請預留排隊/預約可能。", place:"とんかつ 成蔵" },
         { time:"18:30", type:"food", title:"晚餐：Hiyoku no Tori", note:"用溫柔的一餐收尾今天。", place:"Hiyoku no Tori" },
+        { time:"—", type:"hotel", title:"住宿：Ueno First City Hotel", note:"回上野休息，隔天收尾更順。", place:"Ueno First City Hotel" },
       ]
     },
     {
@@ -841,6 +845,7 @@
 </script>
 </body>
 </html>
+
 
 
 
