--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
     <header>
       <div class="title">
         <div class="badge"><span class="dot"></span> 2026/02/20–03/01｜東京 × 富士河口湖 × 仙台</div>
-        <h1>旅遊行程表（互動版）</h1>
+        <h1>旅遊行程表</h1>
         <p class="sub">可勾選完成、搜尋店名地點、快速開地圖。你的勾選狀態會自動保存。</p>
       </div>
 
@@ -845,6 +845,7 @@
 </script>
 </body>
 </html>
+
 
 
 
