--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
       tags: ["food","transit"],
       items: [
         { time:"11:00", type:"food", title:"午餐：燒肉 INOUE 銀座店", note:"最後一餐吃好吃滿，拍張合照收工。", place:"焼肉 INOUE 銀座店" },
-        { time:"13:00", type:"transit", title:"結束行程，出發前往機場", note:"建議提早出發，保留退稅/買伴手禮時間。", place:"東京 機場" },
+        { time:"13:00", type:"transit", title:"結束行程，出發前往機場", note:"建議提早出發，保留退稅/買伴手禮時間。", place:"成田機場" },
       ]
     }
   ];
@@ -845,6 +845,7 @@
 </script>
 </body>
 </html>
+
 
 
 
