--- a/index.html
+++ b/index.html
@@ -533,6 +533,7 @@
       items: [
         { time:"06:00", type:"spot", title:"產屋ヶ崎（逆富士最佳時機）", note:"看天氣與風，湖面越平越容易出現倒影。", place:"産屋ヶ崎" },
         { time:"09:00", type:"spot", title:"忍野八海 散策", note:"水很清、拍照很仙，注意人潮。", place:"忍野八海" },
+        { time:"10:30", type:"spot", title:"富士山夢之大橋", note:"很紅的富士山取景點，建議早點到避開人潮。", place:"富士山夢之大橋" },
         { time:"11:30", type:"shrine", title:"富知六所浅間神社", note:"神社氛圍很棒，停留不需太久。", place:"富知六所浅間神社" },
         { time:"13:30", type:"shop", title:"御殿場 Outlet 購物（重點：MOUSSY / SLY）", note:"先鎖定目標店，省時間也省腳。", place:"御殿場プレミアム・アウトレット" },
         { time:"18:00", type:"transit", title:"返回東京市區還車", note:"預留塞車時間，避免延誤晚餐/夜巴。", place:"東京" },
@@ -845,6 +846,7 @@
 </script>
 </body>
 </html>
+
 
 
 
