--- a/index.html
+++ b/index.html
@@ -503,6 +503,7 @@
         { time:"11:00", type:"food", title:"早餐/早午餐：Depot", note:"布丁＆烤土司人氣高，早點到更穩。", place:"Depot" },
         { time:"12:30", type:"food", title:"午餐：銀座八五（人氣拉麵）", note:"建議提早排隊，吃完再散步甜點。", place:"銀座 八五" },
         { time:"14:30", type:"food", title:"甜點：Frédéric Cassel", note:"補糖補能量，銀座逛街也順路。", place:"Frédéric Cassel Ginza Mitsukoshi Store" },
+        { time:"15:10", type:"food", title:"甜點：Noix de Beurre 銀座三越店", note:"奶油香超濃的費南雪、可麗露名店，外帶也很方便。", place:"Noix de Beurre Ginza Mitsukoshi Store" },
         { time:"16:00", type:"shrine", title:"參拜：今戶神社", note:"招財貓＋戀愛能量點，先來這裡拍照更舒服。", place:"今戶神社" },
         { time:"16:40", type:"spot",   title:"淺草寺・雷門", note:"拍雷門、逛仲見世，傍晚燈光很美。", place:"浅草寺 雷門" },
         { time:"17:30", type:"food", title:"點心：KURAMAE CANNELE", note:"可麗露外脆內Q，買了邊走邊吃。", place:"KURAMAE CANNELE" },
@@ -518,10 +519,13 @@
       items: [
         { time:"08:00", type:"transit", title:"豐田租車：上野駅前取車", note:"出發前確認 ETC／保險／導航語言。", place:"Toyota Rent a Car 上野駅前" },
         { time:"10:30", type:"spot", title:"日川時計店（富士山街景拍攝點）", note:"經典構圖：街道延伸＋富士山。", place:"日川時計店" },
-        { time:"12:00", type:"spot", title:"新倉山淺間公園", note:"階梯＋五重塔＋富士山，體力要留。", place:"新倉山浅間公園" },
+        { time:"11:30", type:"spot", title:"新倉山淺間公園", note:"階梯＋五重塔＋富士山，體力要留。", place:"新倉山浅間公園" },
+        { time:"12:30", type:"food", title:"午餐：Kosaku Kawaguchiko（ほうとう）", note:"河口湖名物餺飥（houtou），暖胃又有飽足感。", place:"Kosaku Kawaguchiko" },
         { time:"14:30", type:"spot", title:"富士山遙拝所", note:"視野開闊、適合拍大景。", place:"富士山 遙拝所" },
-        { time:"18:30", type:"food", title:"晚餐：Torikko", note:"回到河口湖區域慢慢吃。", place:"Torikko" },
-        { time:"—", type:"hotel", title:"住宿：THE NOBORISAKA HOTEL", note:"隔天清晨拍逆富士，記得早睡。", place:"THE NOBORISAKA HOTEL" },
+        { time:"17:00", type:"spot", title:"忍野八海 散策", note:"傍晚光線柔和，人潮比白天舒服。", place:"忍野八海" },
+        { time:"18:00", type:"food", title:"晚餐：Torikko", note:"先吃飽再去看煙火，時間最剛好。", place:"Torikko" },
+        { time:"19:30", type:"spot", title:"大池公園（河口湖冬季煙火主場地）", note:"20:00 煙火開始，19:30 先到卡位；風大很冷要保暖＋熱飲。", place:"大池公園 河口湖" },
+        { time:"—", type:"hotel", title:"住宿：THE NOBORISAKA HOTEL", note:"看完煙火回飯店休息，隔天清晨拍逆富士。", place:"THE NOBORISAKA HOTEL" },
       ]
     },
     {
@@ -532,13 +536,12 @@
       tags: ["spot","shop","transit","food"],
       items: [
         { time:"06:00", type:"spot", title:"產屋ヶ崎（逆富士最佳時機）", note:"看天氣與風，湖面越平越容易出現倒影。", place:"産屋ヶ崎" },
-        { time:"09:00", type:"spot", title:"忍野八海 散策", note:"水很清、拍照很仙，注意人潮。", place:"忍野八海" },
-        { time:"10:30", type:"spot", title:"富士山夢之大橋", note:"很紅的富士山取景點，建議早點到避開人潮。", place:"富士山夢之大橋" },
-        { time:"11:30", type:"shrine", title:"富知六所浅間神社", note:"神社氛圍很棒，停留不需太久。", place:"富知六所浅間神社" },
-        { time:"13:30", type:"shop", title:"御殿場 Outlet 購物（重點：MOUSSY / SLY）", note:"先鎖定目標店，省時間也省腳。", place:"御殿場プレミアム・アウトレット" },
-        { time:"18:00", type:"transit", title:"返回東京市區還車", note:"預留塞車時間，避免延誤晚餐/夜巴。", place:"東京" },
-        { time:"19:30", type:"food", title:"晚餐：Michishirube", note:"回到市區補充體力。", place:"Michishirube" },
-        { time:"23:00", type:"transit", title:"夜間巴士：東京 → 仙台", note:"建議帶頸枕/眼罩/耳塞，提升睡眠品質。", place:"Tokyo Station" },
+        { time:"08:00", type:"spot", title:"富士山夢之大橋", note:"很紅的富士山取景點，建議早點到避開人潮。", place:"富士山夢之大橋" },
+        { time:"9:00", type:"shrine", title:"富知六所浅間神社", note:"神社氛圍很棒，停留不需太久。", place:"富知六所浅間神社" },
+        { time:"10:00", type:"shop", title:"御殿場 Outlet 購物（重點：MOUSSY / SLY）", note:"先鎖定目標店，省時間也省腳。", place:"御殿場プレミアム・アウトレット" },
+        { time:"17:30", type:"transit", title:"返回東京市區還車", note:"預留塞車時間，避免延誤晚餐/夜巴。", place:"東京" },
+        { time:"21:30", type:"food", title:"晚餐：Michishirube", note:"回到市區補充體力。", place:"Michishirube" },
+        { time:"24:00", type:"transit", title:"夜間巴士：東京 → 仙台", note:"建議帶頸枕/眼罩/耳塞，提升睡眠品質。", place:"Tokyo Station" },
       ]
     },
     {
@@ -846,6 +849,7 @@
 </script>
 </body>
 </html>
+
 
 
 
