--- a/index.html
+++ b/index.html
@@ -622,7 +622,22 @@
         { time:"11:00", type:"food", title:"午餐：燒肉 INOUE 銀座店", note:"最後一餐吃好吃滿，拍張合照收工。", place:"焼肉 INOUE 銀座店" },
         { time:"13:00", type:"transit", title:"結束行程，出發前往機場", note:"建議提早出發，保留退稅/買伴手禮時間。", place:"成田機場" },
       ]
-    }
+    },
+    {
+      id: "backup",
+      dateLabel: "備取清單",
+      title: "備取景點 / 備取美食（有空再去）",
+      subtitle: "不排時間｜看體力、天氣與人潮決定",
+      tags: ["food","hotel"],
+      items: [
+        { time:"—", type:"food", title:"Ginza Sand", note:"備取：有空再去（不排時間）。", place:"Ginza Sand" },
+        { time:"—", type:"food", title:"Ramen Kamo to Negi Ueno Okachimachi Main Store（らーめん 鴨to葱 上野御徒町本店）", note:"備取：鴨肉＋蔥系拉麵名店（不排時間）。", place:"らーめん 鴨to葱 上野御徒町本店" },
+        { time:"—", type:"food", title:"RAMEN MATSUI", note:"備取：有空再去（不排時間）。", place:"RAMEN MATSUI" },
+        { time:"—", type:"food", title:"米久本店", note:"備取：有空再去（不排時間）。", place:"米久本店" },
+        { time:"—", type:"food", title:"豚太（とんかつ とん太）", note:"備取：炸豬排名店（不排時間）。", place:"とんかつ とん太" },
+        { time:"—", type:"food", title:"LUKE'S LOBSTER 新宿サザンテラス店", note:"備取：龍蝦堡（不排時間）。", place:"LUKE'S LOBSTER 新宿サザンテラス店" }
+  ]
+}
   ];
 
   const STORAGE_KEY = "trip_checklist_v1";
@@ -849,6 +864,7 @@
 </script>
 </body>
 </html>
+
 
 
 
