--- a/index.html
+++ b/index.html
@@ -630,11 +630,11 @@
       subtitle: "不排時間｜看體力、天氣與人潮決定",
       tags: ["food","hotel"],
       items: [
-        { time:"—", type:"food", title:"Ginza Sand", note:"備取：有空再去（不排時間）。", place:"Ginza Sand" },
+        { time:"—", type:"food", title:"Ginza Sand", note:"備取：有空再去（不排時間）。",   place:"Ginza Sand, 日本〒104-0061 Tokyo, Chuo City, Ginza, 7 Chome−6−4 1F" },
         { time:"—", type:"food", title:"Ramen Kamo to Negi Ueno Okachimachi Main Store（らーめん 鴨to葱 上野御徒町本店）", note:"備取：鴨肉＋蔥系拉麵名店（不排時間）。", place:"らーめん 鴨to葱 上野御徒町本店" },
         { time:"—", type:"food", title:"RAMEN MATSUI", note:"備取：有空再去（不排時間）。", place:"RAMEN MATSUI" },
         { time:"—", type:"food", title:"米久本店", note:"備取：有空再去（不排時間）。", place:"米久本店" },
-        { time:"—", type:"food", title:"豚太（とんかつ とん太）", note:"備取：炸豬排名店（不排時間）。", place:"とんかつ とん太" },
+        { time:"—", type:"food", title:"豚太（とんかつ とん太）", note:"備取：炸豬排名店（不排時間）。",  place:"とんかつ とん太, 3 Chome-17-8 Takada, Toshima City, Tokyo 171-0033, Japan" },
         { time:"—", type:"food", title:"LUKE'S LOBSTER 新宿サザンテラス店", note:"備取：龍蝦堡（不排時間）。", place:"LUKE'S LOBSTER 新宿サザンテラス店" }
   ]
 }
@@ -864,6 +864,7 @@
 </script>
 </body>
 </html>
+
 
 
 
