--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
       tags: ["shrine","food"],
       items: [
         { time:"09:00", type:"shrine", title:"參拜：小野照崎神社", note:"早上人少好拍照，步調舒服。", place:"小野照崎神社" },
-        { time:"09:40", type:"shrine", title:"參拜：妙義神社", note:"順路補一座神社，拍個御朱印/鳥居感。", place:"妙義神社" },
+        { time:"09:40", type:"shrine", title:"參拜：妙義神社", note:"順路補一座神社，拍個御朱印/鳥居感。", place:"3 Chome-16-16 Komagome, Toshima City, Tokyo 170-0003日本" },
         { time:"11:00", type:"food", title:"早餐/早午餐：Depot", note:"布丁＆烤土司人氣高，早點到更穩。", place:"Depot" },
         { time:"12:30", type:"food", title:"午餐：銀座八五（人氣拉麵）", note:"建議提早排隊，吃完再散步甜點。", place:"銀座 八五" },
         { time:"14:30", type:"food", title:"甜點：Frédéric Cassel", note:"補糖補能量，銀座逛街也順路。", place:"Frédéric Cassel Ginza Mitsukoshi Store" },
@@ -864,6 +864,7 @@
 </script>
 </body>
 </html>
+
 
 
 
