--- a/index.html
+++ b/index.html
@@ -498,8 +498,8 @@
       subtitle: "上野神社 → 銀座拉麵甜點 → 淺草雷門",
       tags: ["shrine","food"],
       items: [
-        { time:"09:00", type:"shrine", title:"參拜：小野照崎神社", note:"早上人少好拍照，步調舒服。", place:"小野照崎神社" },
-        { time:"09:40", type:"shrine", title:"參拜：妙義神社", note:"順路補一座神社，拍個御朱印/鳥居感。", place:"3 Chome-16-16 Komagome, Toshima City, Tokyo 170-0003日本" },
+        { time:"09:00", type:"shrine", title:"參拜：妙義神社", note:"順路補一座神社，拍個御朱印/鳥居感。", place:"3 Chome-16-16 Komagome, Toshima City, Tokyo 170-0003日本" },
+        { time:"09:40", type:"shrine", title:"參拜：小野照崎神社", note:"早上人少好拍照，步調舒服。", place:"小野照崎神社" },
         { time:"11:00", type:"food", title:"早餐/早午餐：Depot", note:"布丁＆烤土司人氣高，早點到更穩。", place:"Depot" },
         { time:"12:30", type:"food", title:"午餐：銀座八五（人氣拉麵）", note:"建議提早排隊，吃完再散步甜點。", place:"銀座 八五" },
         { time:"14:30", type:"food", title:"甜點：Frédéric Cassel", note:"補糖補能量，銀座逛街也順路。", place:"Frédéric Cassel Ginza Mitsukoshi Store" },
@@ -518,13 +518,13 @@
       tags: ["transit","spot","hotel","food"],
       items: [
         { time:"08:00", type:"transit", title:"豐田租車：上野駅前取車", note:"出發前確認 ETC／保險／導航語言。", place:"Toyota Rent a Car 上野駅前" },
-        { time:"10:30", type:"spot", title:"日川時計店（富士山街景拍攝點）", note:"經典構圖：街道延伸＋富士山。", place:"日川時計店" },
-        { time:"11:30", type:"spot", title:"新倉山淺間公園", note:"階梯＋五重塔＋富士山，體力要留。", place:"新倉山浅間公園" },
-        { time:"12:30", type:"food", title:"午餐：Kosaku Kawaguchiko（ほうとう）", note:"河口湖名物餺飥（houtou），暖胃又有飽足感。", place:"Kosaku Kawaguchiko" },
-        { time:"14:30", type:"spot", title:"富士山遙拝所", note:"視野開闊、適合拍大景。", place:"富士山 遙拝所" },
-        { time:"17:00", type:"spot", title:"忍野八海 散策", note:"傍晚光線柔和，人潮比白天舒服。", place:"忍野八海" },
-        { time:"18:00", type:"food", title:"晚餐：Torikko", note:"先吃飽再去看煙火，時間最剛好。", place:"Torikko" },
-        { time:"19:30", type:"spot", title:"大池公園（河口湖冬季煙火主場地）", note:"20:00 煙火開始，19:30 先到卡位；風大很冷要保暖＋熱飲。", place:"大池公園 河口湖" },
+        { time:"10:30", type:"spot", title:"新倉山淺間公園", note:"階梯＋五重塔＋富士山，體力要留。", place:"新倉山浅間公園" },
+        { time:"11:30", type:"spot", title:"日川時計店（富士山街景拍攝點）", note:"經典構圖：街道延伸＋富士山。", place:"日川時計店" },
+        { time:"12:30", type:"spot", title:"忍野八海 散策", note:"傍晚光線柔和，人潮比白天舒服。", place:"忍野八海" },
+        { time:"13:30", type:"food", title:"午餐：Kosaku Kawaguchiko（ほうとう）", note:"河口湖名物餺飥（houtou），暖胃又有飽足感。", place:"Kosaku Kawaguchiko" },
+        { time:"15:30", type:"spot", title:"富士山遙拝所", note:"視野開闊、適合拍大景。", place:"富士山 遙拝所" },
+        { time:"19:00", type:"spot", title:"大池公園（河口湖冬季煙火主場地）", note:"20:00 煙火開始，19:30 先到卡位；風大很冷要保暖＋熱飲。", place:"大池公園 河口湖" },
+        { time:"21:00", type:"food", title:"晚餐：Torikko", note:"先看煙火再吃飽，時間最剛好。", place:"Torikko" },
         { time:"—", type:"hotel", title:"住宿：THE NOBORISAKA HOTEL", note:"看完煙火回飯店休息，隔天清晨拍逆富士。", place:"THE NOBORISAKA HOTEL" },
       ]
     },
@@ -567,7 +567,7 @@
         { time:"10:00", type:"spot", title:"出發：宮城藏王狐狸村", note:"注意園區規範，拍照別驚擾狐狸。", place:"宮城蔵王キツネ村" },
         { time:"14:00", type:"shrine", title:"返回仙台：參拜 大崎八幡宮", note:"很有氣勢的神社，適合收心散步。", place:"大崎八幡宮" },
         { time:"16:00", type:"shop", title:"仙台車站 伴手禮採買", note:"牛舌相關、點心、限定口味一次補齊。", place:"仙台駅" },
-        { time:"18:30", type:"food", title:"晚餐：仙台車站當地美食（牛舌/壽司）", note:"吃飽再上車回東京更舒服。", place:"仙台駅" },
+        { time:"18:30", type:"food", title:"晚餐：仙台車站當地美食（牛舌 善治郎 仙台站牛舌通）", note:"吃飽再上車回東京更舒服。", place:"牛舌 善治郎 仙台站牛舌通" },
         { time:"21:00", type:"transit", title:"新幹線：仙台 → 東京", note:"可先把隔天東京行程需要的交通票/路線確認一下。", place:"仙台駅" },
         { time:"—", type:"hotel", title:"住宿：民宿", note:"地址：1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本", place:"1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本" },
       ]
@@ -581,9 +581,9 @@
       items: [
         { time:"09:30", type:"shrine", title:"參拜：法輪寺", note:"節奏放慢，拍一些日常感的東京。", place:"法輪寺" },
         { time:"10:10", type:"shrine", title:"參拜：感通寺", note:"接著走第二個點，慢慢逛、慢慢拍。", place:"感通寺" },
-        { time:"11:30", type:"food", title:"午餐：らぁ麺や嶋", note:"熱門店可能需要排隊，早到更好。", place:"らぁ麺や 嶋" },
-        { time:"14:30", type:"food", title:"點心：Shogun Burger", note:"想要爽感就點招牌。", place:"Shogun Burger" },
-        { time:"18:30", type:"food", title:"晚餐：伊吹壽喜燒", note:"暖胃收尾，今天吃得很完整。", place:"伊吹 すき焼き" },
+        { time:"12:30", type:"food", title:"午餐：らぁ麺や嶋", note:"熱門店可能需要排隊，早到更好。", place:"らぁ麺や 嶋" },
+        { time:"15:30", type:"food", title:"點心：Shogun Burger", note:"想要爽感就點招牌。", place:"Shogun Burger" },
+        { time:"19:30", type:"food", title:"晚餐：伊吹壽喜燒", note:"暖胃收尾，今天吃得很完整。", place:"伊吹 すき焼き" },
         { time:"—", type:"hotel", title:"住宿：民宿", note:"地址：1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本", place:"1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本" },
       ]
     },
@@ -864,7 +864,6 @@
 </script>
 </body>
 </html>
-
 
 
 
