--- a/index.html
+++ b/index.html
@@ -538,9 +538,10 @@
         { time:"06:00", type:"spot", title:"產屋ヶ崎（逆富士最佳時機）", note:"看天氣與風，湖面越平越容易出現倒影。", place:"産屋ヶ崎" },
         { time:"08:00", type:"spot", title:"富士山夢之大橋", note:"很紅的富士山取景點，建議早點到避開人潮。", place:"富士山夢之大橋" },
         { time:"9:00", type:"shrine", title:"富知六所浅間神社", note:"神社氛圍很棒，停留不需太久。", place:"富知六所浅間神社" },
+        { time:"9:30", type:"shrine", title:"星巴克 富士川服務區", note:"最美星巴克。", place:"星巴克 富士川服務區" },
         { time:"10:00", type:"shop", title:"御殿場 Outlet 購物（重點：MOUSSY / SLY）", note:"先鎖定目標店，省時間也省腳。", place:"御殿場プレミアム・アウトレット" },
         { time:"17:30", type:"transit", title:"返回東京市區還車", note:"預留塞車時間，避免延誤晚餐/夜巴。", place:"東京" },
-        { time:"21:30", type:"food", title:"晚餐：Michishirube", note:"回到市區補充體力。", place:"Michishirube" },
+        { time:"21:00", type:"food", title:"晚餐：焼鳥 お惚気", note:"回到市區補充體力。", place:"焼鳥 お惚気" },
         { time:"24:00", type:"transit", title:"夜間巴士：東京 → 仙台", note:"建議帶頸枕/眼罩/耳塞，提升睡眠品質。", place:"Tokyo Station" },
       ]
     },
@@ -864,6 +865,7 @@
 </script>
 </body>
 </html>
+
 
 
 
