--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
       tags: ["hotel","food"],
       items: [
         { time:"17:00", type:"hotel", title:"抵達並入住 Ueno First City Hotel", note:"放行李、稍作休息，晚上直接進攻牛舌。", place:"Ueno First City Hotel" },
-        { time:"19:00", type:"food",  title:"晚餐：焼肉一心たん助 上野本店（厚切牛舌吃到飽）", note:"建議提早到或先確認候位方式。", place:"焼肉一心たん助 上野本店" },
+        { time:"18:30", type:"food", title:"晚餐：厚切り牛タン 焼肉一心たん助 上野御徒町アメ横店（厚切牛舌吃到飽）", note:"建議提早到或先確認候位方式。", place:"厚切り牛タン 焼肉一心たん助 上野御徒町アメ横店" },
       ]
     },
     {
@@ -520,6 +520,7 @@
         { time:"08:00", type:"transit", title:"豐田租車：上野駅前取車", note:"出發前確認 ETC／保險／導航語言。", place:"Toyota Rent a Car 上野駅前" },
         { time:"10:30", type:"spot", title:"新倉山淺間公園", note:"階梯＋五重塔＋富士山，體力要留。", place:"新倉山浅間公園" },
         { time:"11:30", type:"spot", title:"日川時計店（富士山街景拍攝點）", note:"經典構圖：街道延伸＋富士山。", place:"日川時計店" },
+        { time:"12:00", type:"shrine", title:"參拜：新屋山神社（日本三大財運神社之首）", note:"求財運超有名；冬天注意路面結冰與停車動線。", place:"新屋山神社" },
         { time:"12:30", type:"spot", title:"忍野八海 散策", note:"傍晚光線柔和，人潮比白天舒服。", place:"忍野八海" },
         { time:"13:30", type:"food", title:"午餐：Kosaku Kawaguchiko（ほうとう）", note:"河口湖名物餺飥（houtou），暖胃又有飽足感。", place:"Kosaku Kawaguchiko" },
         { time:"15:30", type:"spot", title:"富士山遙拝所", note:"視野開闊、適合拍大景。", place:"富士山 遙拝所" },
@@ -584,6 +585,7 @@
         { time:"10:10", type:"shrine", title:"參拜：感通寺", note:"接著走第二個點，慢慢逛、慢慢拍。", place:"感通寺" },
         { time:"12:30", type:"food", title:"午餐：らぁ麺や嶋", note:"熱門店可能需要排隊，早到更好。", place:"らぁ麺や 嶋" },
         { time:"15:30", type:"food", title:"點心：Shogun Burger", note:"想要爽感就點招牌。", place:"Shogun Burger" },
+        { time:"16:00", type:"shop", title:"購物：オフプライスストア LOCUST 新宿マルイアネックス店", note:"晚餐前逛一下挖寶；注意營業時間＆人潮。", place:"オフプライスストアLOCUST 新宿マルイアネックス店" },
         { time:"19:30", type:"food", title:"晚餐：伊吹壽喜燒", note:"暖胃收尾，今天吃得很完整。", place:"伊吹 すき焼き" },
         { time:"—", type:"hotel", title:"住宿：民宿", note:"地址：1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本", place:"1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本" },
       ]
@@ -596,7 +598,7 @@
       tags: ["spot","food"],
       items: [
         { time:"06:00", type:"spot", title:"東京迪士尼海洋 全日遊玩", note:"建議入園先搶熱門設施/表演時段。", place:"Tokyo DisneySea" },
-        { time:"20:30", type:"food", title:"晚餐：Hiyoku no Tori", note:"用溫柔的一餐收尾今天。", place:"Hiyoku no Tori" },
+        { time:"21:00", type:"food", title:"晚餐：しゃぶしゃぶつかだ 渋谷スクランブルスクエア店", note:"用溫柔的一餐收尾今天。", place:"しゃぶしゃぶつかだ 渋谷スクランブルスクエア店" },
         { time:"—", type:"hotel", title:"住宿：民宿", note:"地址：1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本", place:"1 Chome-4 Minowa, Taito City, Tokyo 110-0011 日本" },
       ]
     },
@@ -631,12 +633,14 @@
       subtitle: "不排時間｜看體力、天氣與人潮決定",
       tags: ["food","hotel"],
       items: [
-        { time:"—", type:"food", title:"Ginza Sand", note:"備取：有空再去（不排時間）。",   place:"Ginza Sand, 日本〒104-0061 Tokyo, Chuo City, Ginza, 7 Chome−6−4 1F" },
-        { time:"—", type:"food", title:"Ramen Kamo to Negi Ueno Okachimachi Main Store（らーめん 鴨to葱 上野御徒町本店）", note:"備取：鴨肉＋蔥系拉麵名店（不排時間）。", place:"らーめん 鴨to葱 上野御徒町本店" },
-        { time:"—", type:"food", title:"RAMEN MATSUI", note:"備取：有空再去（不排時間）。", place:"RAMEN MATSUI" },
-        { time:"—", type:"food", title:"米久本店", note:"備取：有空再去（不排時間）。", place:"米久本店" },
-        { time:"—", type:"food", title:"豚太（とんかつ とん太）", note:"備取：炸豬排名店（不排時間）。",  place:"とんかつ とん太, 3 Chome-17-8 Takada, Toshima City, Tokyo 171-0033, Japan" },
-        { time:"—", type:"food", title:"LUKE'S LOBSTER 新宿サザンテラス店", note:"備取：龍蝦堡（不排時間）。", place:"LUKE'S LOBSTER 新宿サザンテラス店" }
+        { time:"—", type:"food", title:"Ginza Sand", note:"備取｜銀座人氣三明治店，有空再去。", place:"Ginza Sand, 日本〒104-0061 Tokyo, Chuo City, Ginza, 7 Chome−6−4 1F" },
+        { time:"—", type:"food", title:"Ramen Kamo to Negi Ueno Okachimachi Main Store（らーめん 鴨to葱 上野御徒町本店）", note:"備取｜鴨肉×蔥系拉麵名店；看排隊情況決定。", place:"らーめん 鴨to葱 上野御徒町本店" },
+        { time:"—", type:"food", title:"RAMEN MATSUI", note:"備取｜拉麵候補；看當天胃口與人潮插入。", place:"RAMEN MATSUI" },
+        { time:"—", type:"food", title:"米久本店", note:"備取｜老字號餐廳候補；適合想吃得更「東京」的一餐。", place:"米久本店" },
+        { time:"—", type:"food", title:"豚太（とんかつ とん太）", note:"備取｜炸豬排名店；若成蔵排太久就改這間。", place:"とんかつ とん太, 3 Chome-17-8 Takada, Toshima City, Tokyo 171-0033, Japan" },
+        { time:"—", type:"food", title:"LUKE'S LOBSTER 新宿サザンテラス店", note:"備取｜龍蝦堡解饞點；逛街路過就買。", place:"LUKE'S LOBSTER 新宿サザンテラス店" },
+        { time:"—", type:"shop", title:"Luck Rack（錦糸町マルイ 5F）", note:"備取｜逛街補貨點；路過就進去挖寶。", place:"Luck Rack, 日本〒130-0022 Tokyo, Sumida City, Kōtōbashi, 3-chōme−9−１０ 錦糸町マルイ ５Ｆ" },
+        { time:"—", type:"shop", title:"Luck Rack Ario Kitasuna（アリオ北砂 3F）", note:"備取｜大型商場裡的挖寶點；看時間順路插入。", place:"Luck Rack Ario Kitasuna, 日本〒136-0073 Tokyo, Koto City, Kitasuna, 2-chōme−17−１ アリオ北砂 ３Ｆ" },
   ]
 }
   ];
@@ -865,6 +869,7 @@
 </script>
 </body>
 </html>
+
 
 
 
