--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
         { time:"10:00", type:"shop", title:"御殿場 Outlet 購物（重點：MOUSSY / SLY）", note:"先鎖定目標店，省時間也省腳。", place:"御殿場プレミアム・アウトレット" },
         { time:"17:30", type:"transit", title:"返回東京市區還車", note:"預留塞車時間，避免延誤晚餐/夜巴。", place:"東京" },
         { time:"21:00", type:"food", title:"晚餐：焼鳥 お惚気", note:"回到市區補充體力。", place:"焼鳥 お惚気" },
-        { time:"24:00", type:"transit", title:"夜間巴士：東京 → 仙台", note:"建議帶頸枕/眼罩/耳塞，提升睡眠品質。", place:"Tokyo Station" },
+        { time:"24:20", type:"transit", title:"夜間巴士：東京 → 仙台", note:"建議帶頸枕/眼罩/耳塞，提升睡眠品質。", place:"Tokyo Station" },
       ]
     },
     {
@@ -610,8 +610,8 @@
       tags: ["shrine","food"],
       items: [
         { time:"10:30", type:"shrine", title:"阿佐谷神明宮", note:"氣氛很舒服，適合拍清新日系感。", place:"阿佐谷神明宮" },
-        { time:"12:30", type:"food", title:"午餐：Tonkatsu Narikura", note:"名店請預留排隊/預約可能。", place:"とんかつ 成蔵" },
-        { time:"20:30", type:"food", title:"晚餐：焼肉ホルモン金樹", note:"玩完吃肉超幸福。", place:"焼肉ホルモン金樹" },
+        { time:"12:30", type:"food", title:"午餐：燒肉 牛肉廚房 中目黑", note:"名店請預留排隊/預約可能。", place:"燒肉 牛肉廚房 中目黑" },
+        { time:"18:50", type:"food", title:"晚餐：Tonkatsu Narikura", note:"名店請預留排隊/預約可能。", place:"とんかつ 成蔵" },
         { time:"—", type:"hotel", title:"住宿：Ueno First City Hotel", note:"回上野休息，隔天收尾更順。", place:"Ueno First City Hotel" },
       ]
     },
@@ -869,6 +869,7 @@
 </script>
 </body>
 </html>
+
 
 
 
